JDK 11 update, key+selection features, cleanup.
- removed old and buggy LaFs, improved LaF switching
- added prefetched targetIsComposite
- update tab selecting.
- fixed font ComboBox size.
- fixed ctrl- and shift- selecting
- persistent UIProperties (saved in ~/.vrsrc)
- various: better mouse focus and key following, updated keymappings, formatting and cleanup.